--- a/src/index-copy.html
+++ b/src/index-copy.html
@@ -555,7 +555,7 @@
                 </div>
             </div>
             <main class="site-main">
-                <div id="alerts" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Alerts">
+                <div id="alerts" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Alerts">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Alerts</span>
                     </h2>
@@ -629,7 +629,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="banners" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Banners">
+                <div id="banners" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Banners">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Banners</span>
                     </h2>
@@ -819,7 +819,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="takeActionBlocks" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Take action blocks">
+                <div id="takeActionBlocks" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Take action blocks">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Take action blocks</span>
                     </h2>
@@ -933,7 +933,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="promoBlocks" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Promo blocks">
+                <div id="promoBlocks" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Promo blocks">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Promo blocks</span>
                     </h2>
@@ -1032,7 +1032,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="pageListBlock" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Page list block">
+                <div id="pageListBlock" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Page list block">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Page list block</span>
                     </h2>
@@ -1187,7 +1187,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="cardGrids" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Card grids">
+                <div id="cardGrids" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Card grids">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Card grids</span>
                     </h2>
@@ -1322,7 +1322,7 @@
                         <a class="fs-20px" href="#"><strong>View more courses and events<i class="fas fa-chevron-double-right fs-13px ml-2" aria-hidden="true"></i></strong></a>
                     </div>
                 </div>
-                <div id="search" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Search">
+                <div id="search" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Search">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Search</span>
                     </h2>
@@ -1664,7 +1664,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="feedback" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Feedback">
+                <div id="feedback" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Feedback">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Feedback</span>
                     </h2>
@@ -1709,7 +1709,7 @@
                     </form>
                     <script src="../js/Feedback.min.js"></script>
                 </div>
-                <div id="reference" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Reference">
+                <div id="reference" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Reference">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Reference</span>
                     </h2>
@@ -1732,7 +1732,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="share" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Share">
+                <div id="share" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Share">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Share</span>
                     </h2>
@@ -1780,7 +1780,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="resourceDetails" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Resource details">
+                <div id="resourceDetails" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Resource details">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Resource details</span>
                     </h2>
@@ -1826,7 +1826,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="recommended" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Recommended">
+                <div id="recommended" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Recommended">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Recommeded</span>
                     </h2>
@@ -1878,7 +1878,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="roadblocks" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Roadblocks">
+                <div id="roadblocks" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Roadblocks">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Roadblocks</span>
                     </h2>
@@ -1940,7 +1940,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="quote" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Quotes">
+                <div id="quote" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Quotes">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Quotes</span>
                     </h2>
@@ -1985,7 +1985,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="curatedList" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Curated list">
+                <div id="curatedList" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Curated list">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Curated list</span>
                     </h2>
@@ -2042,7 +2042,7 @@
                     </ul>
                     <a href="#" class="btn btn-outline-primary btn-outline-darker w-100 w-lg-auto mw-btn-common">See more CEUs</a>
                 </div>
-                <div id="pdfViewer" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: PDF viewer">
+                <div id="pdfViewer" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: PDF viewer">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">PDF viewer</span>
                     </h2>
@@ -2051,7 +2051,7 @@
                     <iframe class="embed-responsive-item" src="https://www.apta.org/uploadedFiles/APTAorg/About_Us/Policies/HOD/Ethics/CodeofEthics.pdf" frameborder="0"></iframe>
                 </div>
                 <div class="mb-block-common"></div>
-                <div id="featuredSpeakerBlock" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Featured speakers">
+                <div id="featuredSpeakerBlock" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Featured speakers">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Featured speakers</span>
                     </h2>
@@ -2148,7 +2148,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="partners" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Partners">
+                <div id="partners" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Partners">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Partners</span>
                     </h2>
@@ -2210,7 +2210,7 @@
                         </a>
                     </div>
                 </div>
-                <div id="imagePlusContent" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Image + content">
+                <div id="imagePlusContent" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Image + content">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Image + content</span>
                     </h2>
@@ -2258,7 +2258,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="twoColumnListBlock" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Two column list block">
+                <div id="twoColumnListBlock" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Two column list block">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Two column list block</span>
                     </h2>
@@ -2324,7 +2324,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="accordion" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Accordion">
+                <div id="accordion" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Accordion">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Accordion</span>
                     </h2>
@@ -2422,7 +2422,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="extras" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Extras">
+                <div id="extras" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Extras">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Extras</span>
                     </h2>
@@ -2470,7 +2470,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="singleImagePromo" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Single image promo">
+                <div id="singleImagePromo" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Single image promo">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Single image promo</span>
                     </h2>
@@ -2520,7 +2520,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="singleImagePillNav" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Navigation pill block">
+                <div id="singleImagePillNav" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Navigation pill block">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Navigation pill block</span>
                     </h2>
@@ -2580,7 +2580,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="pageListBlockModified" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Page list block modified">
+                <div id="pageListBlockModified" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Page list block modified">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Page list block modified</span>
                     </h2>
@@ -2622,7 +2622,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="findAPTCta" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Find-a-PT CTA">
+                <div id="findAPTCta" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Find-a-PT CTA">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Find-a-PT CTA</span>
                     </h2>
@@ -2639,7 +2639,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="quoteCarousel" class="jump-to container px-30px mt-50px mb-50px" data-jtn-anchor="title: Quote carousel">
+                <div id="quoteCarousel" class="jump-to container px-30px mt-50px mb-50px" data-jump-anchor="title: Quote carousel">
                     <h2 class="title-hr-after mb-5px">
                         <span class="title-hr-after__text ff-apta-sans fw-900">Quote carousel</span>
                     </h2>
@@ -2912,7 +2912,8 @@
         </div>
     </div>
     <script id="view-markup-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/view-markup/dist/js/view-markup.min.js?modal-nav" defer></script>
-    <script id="jump-to-nav-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/jump-to-nav/dist/js/jump-to-nav.min.js?top=150px&nest&z-index=5000&smooth"></script>
+    <!-- <script id="jump-to-nav-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/jump-to-nav/dist/js/jump-to-nav.min.js?top=150px&nest&z-index=5000&smooth"></script> -->
+    <script id="jump-to-nav-js" src="js/jump-to-nav.js?top=100px&nest=true&z-index=5000&smooth=true"></script>
     <script src="https://apta.org/js/main.min.js?v0183" defer></script>
 </body>
 </html>
