--- a/src/index-copy.html
+++ b/src/index-copy.html
@@ -2913,7 +2913,7 @@
     </div>
     <script id="view-markup-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/view-markup/dist/js/view-markup.min.js?modal-nav" defer></script>
     <!-- <script id="jump-to-nav-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/jump-to-nav/dist/js/jump-to-nav.min.js?top=150px&nest&z-index=5000&smooth"></script> -->
-    <script id="jump-to-nav-js" src="js/jump-to-nav.js?top=100px&nest=true&z-index=5000&smooth=true"></script>
+    <script id="jump-to-nav-js" src="js/jump-to-nav.js?top=100px&nest=true&z-index=5000&smooth=true&css=external"></script>
     <script src="https://apta.org/js/main.min.js?v0183" defer></script>
 </body>
 </html>
