Bunch of enhancements. Version 1.5.0

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Proxima Nova linkage -->
+    <link rel="stylesheet" href="https://use.typekit.net/lne5xqz.css">
+
+    <!-- Preload fonts -->
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_7_0.woff" as="font" crossorigin>
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_0_0.woff" as="font" crossorigin>
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_1_0.woff" as="font" crossorigin>
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_2_0.woff" as="font" crossorigin>
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_3_0.woff" as="font" crossorigin>
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/fonts/32E01F_4_0.woff" as="font" crossorigin>
+
+    <!-- Preload and link to font awesome -->
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/vendor/font-awesome/css/font-awesome.css?v14" as="style" />
+    <link rel="stylesheet" type="text/css" href="https://lurie-main.netlify.app/static/lurie/vendor/font-awesome/css/font-awesome.css?v14" />
+
+    <!-- Preload and link to Swiper CSS (CDN) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" as="style" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+
+    <!-- Preload and link to prod CSS -->
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/css/main.css" as="style" />
+    <link rel="stylesheet" type="text/css" href="https://lurie-main.netlify.app/static/lurie/css/main.css" />
+
+    <!-- Preload and link to redesign CSS -->
+    <link rel="preload" href="https://lurie-main.netlify.app/static/lurie/css/redesign.css?v14" as="style" />
+    <link rel="stylesheet" type="text/css" href="https://lurie-main.netlify.app/static/lurie/css/redesign.css?v14" />
 
 </head>
 
@@ -18,7 +45,7 @@
             <main class="site-main p-0">
                 <div class="main-body">
 
-                    <div data-jtn-show-group="title: Patience and (i) Visitors">
+                    <div data-jtn-group="title: Patience and (i) Visitors">
 
                         <div data-jtn-anchor="title: Make an Appointment">
                             <div class="container container--outer my-5">
@@ -385,7 +412,7 @@
                         <hr style="margin: 58px 0;">
                     </div>
 
-                    <div data-jtn-show-group="title: Homepage and ways to help redesign">
+                    <div data-jtn-group="title: Homepage and ways to help redesign">
                         <div data-jtn-anchor="title: Heroes" id="heroNew" class="container container--outer mt-5">
                             <h2 class="h5">Hero (new)</h2>
                         </div>
@@ -1859,7 +1886,7 @@
                         <hr style="margin: 58px 0;">
                     </div>
 
-                    <div data-jtn-show-group="title: Block redesign">
+                    <div data-jtn-group="title: Block redesign">
                         <div class="container container--outer" data-jtn-anchor="title: Video Block" id="videoBlock">
                             <h2 class="h5">Video Block</h2>
                             <br>
