Site nav POC bug fixes and testing

--- a/src/index.html
+++ b/src/index.html
@@ -85,109 +85,13 @@
                         </li>
                         <li>
                             <a href="/redesign/styleguide.html">Styleguide (redesign)</a>
-
-                            <ul class="small mb-2">
-                                <li>
-                                    <a href="/redesign/styleguide#makeAnAppointment.html">Make an appointment</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#resourceCardGroup.html">Resource card group</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#planYourVisit.html">Plan your visit</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#whileYouReHere.html">While you're here</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#afterYourVisit.html">After your visit</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#heroNew.html">Hero</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#alertPopouts.html">Alert popouts</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#colors.html">Colors</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#buttonNew.html">Button</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#dropdown.html">Dropdown</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#brandFeature.html">Brand feature</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#flexMessaging.html">Flex messaging</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#news.html">News</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#featuredWays.html">Featured ways to help</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#awards.html">Awards</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#eventsNew.html">Events</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#backgroundSection.html">Background section</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#newsletterCallout.html">Newsletter callout</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#typography.html">Typography</a>
-                                </li>
-
-                                <li>
-                                    <a href="/redesign/styleguide#videoBlock.html">Video block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#carousel.html">Carousel</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#slideshow.html">Slideshow</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#richTextBlock.html">Rich text block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#badgeBlock.html">Badge block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#calloutWallBlock.html">Callout wall block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#relatedStatisticsBlock.html">Related statistics block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#accordionBlock.html">Accordion block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#upcomingEventsBlock.html">Upcoming events block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#socialNavBlock.html">Social nav block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#simpleCalloutBlock.html">Simple callout block</a>
-                                </li>
-                                <li>
-                                    <a href="/redesign/styleguide#columnBlock.html">Column block</a>
-                                </li>
-                            </ul>
                         </li>
                     </ul>
                 </div>
             </main>
         </div>
     </div>
+    <script src="js/jump-to-nav.js?position=left&top=100px&z-index=5000&smooth&show-search-after=50&auto-close&search-focus&active-section&site-nav&nest&collapse-nested"></script>
 </body>
 
 </html>
