--- a/src/landing-page.html
+++ b/src/landing-page.html
@@ -2174,7 +2174,7 @@
 
         <!-- Link to Javascript -->
         <script id="view-markup-js" src="https://cdn.jsdelivr.net/gh/marshallcrosby/view-markup@1.6.4/dist/js/view-markup.min.js?modal-nav&exclude-attribute=data-jtn-anchor"></script>
-        <script src="js/jump-to-nav.js?position=left&top=100px&z-index=5000&smooth&show-search-after=50&auto-close&search-focus&active-section&site-nav"></script>
+        <script src="js/jump-to-nav.js?position=left&top=100px&z-index=5000&smooth&show-search-after=50&auto-close&search-focus&active-section&site-nav&nest&collapse-nested"></script>
     </div>
 </body>
 
